--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h2>One to One Chat | Spring boot & Websocket </h2>
+<h2>One to One Chat | Spring boot & Websocket | Fatih</h2>
 
 <div class="user-form" id="username-page">
     <h2>Enter Chatroom</h2>
